# mastering_llms

./: .env.example  .gitignore  README.md  pyproject.toml
src/mastering_llms/: __main__.py
src/week1/: day1.ipynb  day1.py  day5.py
src/week1/community-contributions/: day1-selenium-for-javascript-sites.py
src/week2/: day1.ipynb  day1.py  day2.ipynb  day2.py  day3.ipynb  day3.py  day4.ipynb  day4.py  day5.ipynb  day5.py
src/week3/: day5_gradio.ipynb  day5_gradio.py  day5_no_quantizaion.py  day5_no_quantization.ipynb  day5_with_drive_gradio.ipynb  day5_with_drive_gradio.py
